public/styles/layout.css
@import url('https://fonts.googleapis.com/css?family=Assistant&display=swap');
@import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');

body {
  background-image: url('../img/starry.jpg');
  font-family: 'Assistant', sans-serif;
  background-repeat: no-repeat;
  color: white;
  width: 375px;

}

#all-about-us {
  
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  width: 80%;
  justify-content: center;
}



.about-us {
  width: 40%;
  margin: 50px 15px;

}

.about-us img {
  margin-bottom: 25px;
}

.about-us p {
  width: 100%;
  font-size: 20px;
}

#trivia-box {
  display: flex;
  justify-content: center;
  width: 100%;
  margin-top: 100px;
  padding: 20px 20px;
  font-size: 30px;
  background: rgba(0, 0, 0, 0.358);
}

#score-header {
  margin-top: 60px;
}

#trivia-box form {
  justify-content: center;
  
}

#trivia-answers {
  display: flex;
  flex-direction: column;
  text-align: center;
  
}

#trivia-answers button {
  color: white;
  font-size: 20px;
  padding: 1.1em;
  background: rgba(250, 250, 254, 0);
  border-style: none;
  font-size: 30px;
}


#question-title {
  text-align: center;
  width: 100%;
  margin-top: 70px;
  padding: 20px 20px;
  font-size: 24px;
  background: rgba(0, 0, 0, 0.358);
}

#form_container {
  flex-direction: column;
  margin-top: 50px;
  width: 100%;
  text-align: center;
}

#form_container h1 {
  margin-right: 15px;
  margin-bottom: 1.4em;
}

#choose-game {
  display: flex;
  justify-content: center;
  margin-top: 150px;
  flex-wrap: wrap;
}

#yoda-trivia-option {
  margin-top: 6em;
}


#choose-game button {
  margin: 25px;
}


/* #simon-flex {
  display: flex;
  justify-content: center;
  width: 100%;
  text-align: center;
  margin-bottom: 50px;
}

#lightsaber-timer {
  margin: auto;
  width: 60%;
  margin-top: 40px;
} */

#score-td {
  text-align: center;
}

#timer_container {
  z-index: -1;
  margin-top: 2em;
}

#timer-outer {
  width: 100%;
}

#score-box {
  text-align: center;
  margin-top: 150px;
 
  background: rgba(0, 0, 0, 0.358);
}

#score-text {
  font-size: 40px;

}

#score-text h1, #score-text h2 {
  margin-bottom: 30px;
}

#score-table  {
  font-size: 30px;
  text-align: left;
  margin: auto;
  display: flex;
  justify-content: space-evenly;
  background: rgba(128, 128, 128, 0.221);

}
#score-table td {
  padding: 40px 80px;
}

#score-table th {
  padding: 40px 80px;
  font-size: 40px;
}



@media (min-width: 768px) and (max-width: 960px){
  
  body {
    width: 768px;
    background-image: url('../img/starry.jpg');
    background-size: cover;                  
    background-repeat: no-repeat;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
  }

  #form_container {
    display: flex;
    justify-content: center;
    margin-top: 150px;
  }

  #all-about-us {
    flex-direction: row;
  
  }

  .about-us {
    width: 40%;
    margin: 50px 15px;
    /* text-align: center; */
  }
  
  .about-us img {
    margin-bottom: 25px;
  }
  
  .about-us p {
    width: 100%;
  }
}

@media all and (min-width: 960px){ 

  body {
    width: 960px;
    background-image: url('../img/starry.jpg');
    background-size: cover;                  
    background-repeat: no-repeat;
    margin: auto;
  }

  #form_container {
    display: flex;
    justify-content: center;
    margin-top: 150px;
  }


  #all-about-us {
    flex-direction: row;
    margin: auto;
  }

  .about-us {
    width: 40%;
    margin: 50px 15px;
    
  }
  
  .about-us img {
    margin-bottom: 25px;
  }
  
  .about-us p {
    background: rgba(0, 0, 0, 0.276);
  }

  
}

